k8s-manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: itp-backend
  namespace: itp-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: itp-backend
  template:
    metadata:
      labels:
        app: itp-backend
      annotations:
        instrumentation.opentelemetry.io/inject-python: "false"
        instrumentation.opentelemetry.io/inject-java: "false"
        instrumentation.opentelemetry.io/inject-nodejs: "false"
        instrumentation.opentelemetry.io/inject-dotnet: "false"
        instrumentation.opentelemetry.io/inject-sdk: "false"
    spec:
      containers:
      - name: backend
        image: 440744215136.dkr.ecr.us-east-1.amazonaws.com/itp-backend:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
