k8s-manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: itp-backend-svc
  namespace: itp-app
spec:
  selector:
    app: itp-backend
  ports:
  - port: 5000
    targetPort: 5000
  type: ClusterIP
