k8s-manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: itp-frontend-svc
  namespace: itp-app
spec:
  selector:
    app: itp-frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
